Fixed overflow

--- a/src/components/specialties/specialties.scss
+++ b/src/components/specialties/specialties.scss
@@ -1,4 +1,7 @@
 .specialties {
+  display: block;
+  overflow: hidden;
+
   &__slider {
     width: 300%;
     height: 556px;
