--- a/src/main.scss
+++ b/src/main.scss
@@ -11,11 +11,6 @@ img {
   pointer-events: none;
 }
 
-html,
-body {
-  overflow-x: hidden;
-}
-
 h1 {
   margin: 0;
   padding: 0;
